"ChangeLog"

2006-02-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-77:
	  Organization changes, basic Makefile maintainence, 
		addition of lib/ directory for development of standard
		libraries.  Starting to look into installation organization.  
	  Documentation build system now supports VPATH building.  
		pdfs and ps's are installed targets now.  


	* HACKT-00-01-04-main-00-76-8-merged-spec-01-04:
	  Merged in spec directive branch.  


2006-01-30	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-76-4-merged-fixdump-06:
	  Bumped snapshot date upon branch merge.  
	  TODO: configure.ac to check for bison versions. 


2006-01-25	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-76-merged-PRS-04-03:
	  Series of bug fixes on mainline, followed by merge of 
		-PRS-04 branch.


2006-01-22	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-73-merged-prsim-00-34:
	  Branch merge.  see src/ChangeLog for details.
	  Initial prsim and PRS language extensions.  
	  Improved configurability and portability.  


2006-01-18	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-25:
	  Configurability and portability update only, 
		after a major libary clean-up from -prsim-00-24.


2006-01-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-22:
	  Most compiler warning flags are now checked during configure
		and passed to automake's AM_CFLAGS and AM_CXXFLAGS.


2006-01-15	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-17-merged-temp-04:
	  Branch merge.  


2006-01-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-16-temp-03:
	  More libc function config tests, pertaining to <ctype.h>.
	  Contemplating support for fat binaries in the future.  


2006-01-12	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-15: