@@ -1,10 +1,8 @@
 # "dox/tutorial/Makefile.am"
 # Makefile for tutorial directory
-#	$Id: Makefile.am,v 1.2 2006/02/05 03:26:07 fang Exp $
+#	$Id: Makefile.am,v 1.3 2006/02/06 00:04:32 fang Exp $
 
 include $(top_srcdir)/dox/Make.dox-head
-
-doc_DATA =
 
 EXTRA_DIST += README
 
